@@ -6,11 +6,13 @@
 struct {
   char *p;
   char ct[2];
-} arr[4] = {
+} arr[] = {
   {arr[1].ct, "a"},
   {arr->ct, "b"},
   {(*arr).ct, "c"},
   {(&arr[2])->ct, "d"},
+  {(*(&arr[3])).ct, "e"},
+  {(&(*(&arr[4])))->ct, "f"},
 };
 
 
@@ -20,4 +22,6 @@ void testBug(void)
   ASSERT (*(arr[1].p) == 'a');
   ASSERT (*(arr[2].p) == 'a');
   ASSERT (*(arr[3].p) == 'c');
+  ASSERT (*(arr[4].p) == 'd');
+  ASSERT (*(arr[5].p) == 'e');
 }
